# WindowMover

./: LICENSE.MD  README.md  angular.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: custom-theme.scss  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: about.rs  apps.rs  mod.rs
src-tauri/src/helpers/: common.rs
src-tauri/src/models/: active_app.rs  app_info.rs  mod.rs  response.rs
src-tauri/src/services/: about.rs  apps.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/models/: active_app.ts  app-info.ts  response.ts
src/app/services/: about.service.ts  apps.service.ts
src/app/views/about/: about.component.html  about.component.ts
src/app/views/home/: home.component.html  home.component.ts
src/app/views/shared/fields/search/: search.component.html  search.component.ts
src/app/views/shared/header/: header.component.html  header.component.ts
src/app/views/shared/window-notify/: window-notify.component.html  window-notify.component.ts
src/environments/: environment.ts
