[package]
name = "windowmover"
version = "0.2.0"
description = "Window Mover"
authors = ["Dmitriy303"]
license = "MIT License"
repository = "https://github.com/rusnakdima/WindowMover"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windowmover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "winbase"] }
winvd = "0.0.46"
windows = "0.52.0"
